--- a/style.css
+++ b/style.css
@@ -1,5 +1,21 @@
-.header {
-    background-color: blue;
-    text-align: center;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.navbar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
     width: 100%;
+    height: 15vh;
+    background: rgb(36, 176, 204);
+}
+
+.navbar a {
+    text-decoration: none;
+    font-size: 36px;
+    color: white;
 }
