--- a/style.css
+++ b/style.css
@@ -30,3 +30,13 @@
     color:white;
     font-size: 2.5rem;
 }
+h2 {
+    text-align: center;
+    margin: 3vw;
+}
+.one > div > p{
+    margin: 3vw;
+}
+.two > div > p{
+    margin: 3vw;
+}
