--- a/style.css
+++ b/style.css
@@ -4,32 +4,44 @@
     box-sizing: border-box;
 }
 
+h1 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    -webkit-text-stroke: 3px rgb(0, 0, 0);
+    font-size: 6rem;
+}
+
 .navbar {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 0 5vw;
     width: 100%;
-    height: 15vh;
-    background: rgb(36, 176, 204);
+    height: 10vh;
+    background: rgba(0, 0, 0, 0.5);
+    position: fixed;
 }
 
 .navbar a {
     text-decoration: none;
-    font-size: 36px;
+    font-size: 3rem;
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.hero {
-    background-image: url(/images/Yellow-Journalism-Index-Header.jpg);
+/* Hero Images */
+.hero-1 { background-image: url(/images/Yellow-Journalism-Index-Header.jpg); }
+.hero-2 { background-image: url(/images//Yellow-Journalism-More-Header.jpg); }
+
+div[class*="hero"] {
     width: 100%;
     height: 75vh;
     display: flex;
     justify-content: center;
     align-items: center;
     color:white;
-    font-size: 2.5rem;
 }
+
 h2 {
     text-align: center;
     margin: 3vw;
@@ -55,4 +67,3 @@ p {
     display: flex;
     flex-wrap: wrap;
 }
-
