--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     margin: 0;
-    padding: 0;
+    padding:0 ;
     box-sizing: border-box;
 }
 
@@ -8,6 +8,23 @@ h1 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     -webkit-text-stroke: 3px rgb(0, 0, 0);
     font-size: 6rem;
+}
+
+h2 {
+    text-align: center;
+    margin: 3vw;
+    font-size: 3em;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+p::selection,
+h2::selection {
+    background-color: rgb(255, 255, 0);
+}
+
+img::selection,
+h1::selection {
+    background-color: rgba(0, 0, 0, 0);
 }
 
 .navbar {
@@ -42,11 +59,6 @@ div[class*="hero"] {
     color:white;
 }
 
-h2 {
-    text-align: center;
-    margin: 3vw;
-    font-size: 3em;
-}
 .one,
 .two,
 .three > div > p{
@@ -66,4 +78,15 @@ p {
 .one-flex {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 2.5vh 10vw;
+}
+
+.one-flex > div {
+    width: 35vw;
+}
+
+.one-flex > div > img {
+    width: 35vw;
+    padding-top: 5vh;
 }
