--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+p {
+    font-size: 1.4em;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 h1 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     -webkit-text-stroke: 3px rgb(0, 0, 0);
@@ -15,16 +20,6 @@ h2 {
     margin: 3vw;
     font-size: 3em;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-p::selection,
-h2::selection {
-    background-color: rgb(255, 255, 0);
-}
-
-img::selection,
-h1::selection {
-    background-color: rgba(0, 0, 0, 0);
 }
 
 .navbar {
@@ -47,8 +42,8 @@ h1::selection {
 }
 
 /* Hero Images */
-.hero-1 { background-image: url(/images/Yellow-Journalism-Index-Header.jpg); }
-.hero-2 { background-image: url(/images//Yellow-Journalism-More-Header.jpg); }
+.hero-1 { background-image: url(/images/Heroes/Yellow-Journalism-Index-Header.jpg); }
+.hero-2 { background-image: url(/images/Heroes/Yellow-Journalism-More-Header.jpg); }
 
 div[class*="hero"] {
     width: 100%;
@@ -57,19 +52,6 @@ div[class*="hero"] {
     justify-content: center;
     align-items: center;
     color:white;
-}
-
-.one,
-.two,
-.three > div > p{
-    margin: 3vw;
-    margin-left: 10%;
-    margin-right: 10%;
-}
-
-p {
-    font-size: 1.4em;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 [class^="image"] {
@@ -89,7 +71,7 @@ p {
 
 .one-flex > div > img {
     width: 35vw;
-    padding-top: 5vh;
+    /* padding-top: 5vh; */
 }
 
 footer {
@@ -123,18 +105,46 @@ footer a {
     font-size: 1.2rem;
 }
 
-
-
 .button {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid red;
+    border: 5px solid black;
     margin: 5vh 25vw;
     height: 25vh;
-    background: url(images/Yellow-Journalism-More-Header.jpg) center;
+    background: url(/images//Photos/Question-Mark.jpeg) center;
+    background-position: center;
+    background-size: cover;
 }
 
 .button a {
     font-size: 1.5rem
+}
+
+.sources p {
+    text-decoration: underline;
+    font-size: 2em;
+}
+
+.address p {
+    text-decoration: underline;
+    font-size: 2em;
+}
+
+.more-button-image {
+    height: 60vh;
+    width: 50vw;
+    display: flex;
+    justify-content: center;
+}
+
+.more-button-image a {
+    color: rgb(250, 250, 250);
+    margin-top: 27vh;
+}
+
+img {
+    border: 5px solid black;
+    object-fit: cover;
+    padding-top: 0vh;
 }
