--- a/styles/style.css
+++ b/styles/style.css
@@ -5,20 +5,19 @@
 }
 
 p {
-    font-size: 1.4em;
+    font-size: 1.35rem;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     -webkit-text-stroke: 3px rgb(0, 0, 0);
     font-size: 6rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 h2 {
-    text-align: center;
-    margin: 3vw;
-    font-size: 3em;
+    margin-bottom: 3vh;
+    font-size: 2rem;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
@@ -42,8 +41,8 @@ h2 {
 }
 
 /* Hero Images */
-.hero-1 { background-image: url(/images/Heroes/Yellow-Journalism-Index-Header.jpg); }
-.hero-2 { background-image: url(/images/Heroes/Yellow-Journalism-More-Header.jpg); }
+.hero-1 { background-image: url(/images/hero-index.jpg); }
+.hero-2 { background-image: url(/images/hero-more.jpg); }
 
 div[class*="hero"] {
     width: 100%;
@@ -54,24 +53,25 @@ div[class*="hero"] {
     color:white;
 }
 
-[class^="image"] {
-    max-width: 20vw;
-}
-
-.one-flex {
+.content {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    padding: 2.5vh 10vw;
+    padding: 10vh 10vw;
 }
 
-.one-flex > div {
+.content > div {
     width: 35vw;
+    max-height: 50vh;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10vh;
 }
 
-.one-flex > div > img {
+.content > div > img {
     width: 35vw;
-    /* padding-top: 5vh; */
+    height: 100%;
+    object-fit: cover;
 }
 
 footer {
@@ -112,7 +112,7 @@ footer a {
     border: 5px solid black;
     margin: 5vh 25vw;
     height: 25vh;
-    background: url(/images//Photos/Question-Mark.jpeg) center;
+    background: url(/images/spanish-american-war.jpg);
     background-position: center;
     background-size: cover;
 }
@@ -141,10 +141,4 @@ footer a {
 .more-button-image a {
     color: rgb(250, 250, 250);
     margin-top: 27vh;
-}
-
-img {
-    border: 5px solid black;
-    object-fit: cover;
-    padding-top: 0vh;
 }
