--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
 }
 
+/* Content overflowing on x-axis hidden */
+body { overflow-x: hidden; }
+
 p {
     font-size: 1.35rem;
     font-family: Arial, Helvetica, sans-serif;
@@ -45,12 +48,13 @@ h2 {
 .hero-2 { background-image: url(/images/hero-more.jpg); }
 
 div[class*="hero"] {
-    width: 100%;
+    width: 100vw;
     height: 75vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    color:white;
+    color: white;
+    background-size: cover;
 }
 
 .content {
@@ -74,13 +78,21 @@ div[class*="hero"] {
     object-fit: cover;
 }
 
+/* Order the imgs on opposite sites. */
+.image-container-2 { order: 1; }
+.text-container-2,
+.text-container-3,
+.image-container-3 {
+    order: 2;
+}
+
 footer {
     padding: 3vh 0;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    background-color: darkgray;
+    background-color: #3f3f3f;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -88,6 +100,7 @@ footer {
 footer div {
     width: 20%;
     text-align: center;
+    margin: 3vh 0;
 }
 
 footer ul {
@@ -96,13 +109,16 @@ footer ul {
 
 footer ul li {
     padding-left: 0;
-    margin: 5%;
+    margin: 2vh;
+}
+
+footer p {
+    font-size: 1.2rem;
 }
 
 footer a {
     color: white;
-    text-decoration: none;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 .button {
@@ -121,16 +137,6 @@ footer a {
     font-size: 1.5rem
 }
 
-.sources p {
-    text-decoration: underline;
-    font-size: 2em;
-}
-
-.address p {
-    text-decoration: underline;
-    font-size: 2em;
-}
-
 .more-button-image {
     height: 60vh;
     width: 50vw;
@@ -141,4 +147,100 @@ footer a {
 .more-button-image a {
     color: rgb(250, 250, 250);
     margin-top: 27vh;
+}
+
+@media only screen and (max-width: 1200px) {
+    h2 {
+        font-size: 1.5rem;
+    }
+    p {
+        font-size: 1rem;
+    }
+}
+
+@media only screen and (max-width: 1000px) {
+    h2 {
+        font-size: 1.5rem; }
+    p {
+        font-size: 0.8rem;
+    }
+    .navbar {
+        height: 7vh;
+    }
+    .navbar a {
+        font-size: 2rem;
+    }
+    div[class*="hero"] {
+        height: 50vh;
+    }
+    .content {
+        padding: 5vh 5vw;
+        justify-content: space-between;
+    }
+    .content > div {
+        width: 42.5vw;
+        margin-bottom: 5vh;
+    }
+    .content div img {
+        width: 42.5vw;
+    }
+}
+
+@media only screen and (max-width: 780px) {
+    h1 {
+        -webkit-text-stroke: 2px rgb(0, 0, 0);
+        font-size: 4rem; 
+    }
+    h2 {
+        font-size: 2rem;
+    }
+    p {
+        font-size: 1rem;
+    }
+    div[class*="hero"] {
+        height: 30vh;
+    }
+    .content > div {
+        width: 100%;
+    }
+    .content > div > img {
+        height: 30vh;
+        width: 100%;
+    }
+    .text-container-2,
+    .image-container-2,
+    .text-container-3,
+    .image-container-3 {
+        order: 0;
+    }
+    footer div {
+        width: 100%;
+        margin: 1vh 0;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    h1 {
+        font-size: 3rem;
+    }
+    h2 {
+        font-size: 1.7rem;
+        margin-bottom: 2vh;
+    }
+}
+
+@media only screen and (max-width: 420px) {
+    h1 {
+        -webkit-text-stroke: 1.5px rgb(0, 0, 0);
+        font-size: 2.2rem; 
+    }
+    h2 {
+        font-size: 1.3rem;
+    }
+    p {
+        font-size: 0.8rem;
+    }
+    .content > div {
+        margin-bottom: 3vh;
+    }
 }
