--- a/styles/style.css
+++ b/styles/style.css
@@ -17,9 +17,11 @@ p {
 }
 
 h1 {
-    text-shadow: 8px 8px 8px #000000; 
-    font-size: 6rem;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 4.5rem;
+    font-family: 'Ultra', serif;
+    text-shadow: 8px 8px 8px #000000;
+    padding: 16px;
+    font-weight: lighter;
 }
 
 h2 {
@@ -35,17 +37,24 @@ h2 {
     justify-content: space-between;
     padding: 0 5vw;
     width: 100%;
-    height: 10vh;
-    background: rgba(0, 0, 0, 0.5);
+    height: 12vh;
+    background-color: #5e5347;
     background-image: url(/images/textures/low-contrast-linen.png);
-    position: fixed;
+    position: relative;
+    box-shadow: 0 20px 20px #35312c;
 }
 
 .navbar a {
     text-decoration: none;
-    font-size: 3rem;
+    font-size: 4vh;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+.navbar a:hover,
+.navbar a:focus {
+    color: yellow;
 }
 
 /* Hero Images */
@@ -60,28 +69,29 @@ div[class*="hero"] {
     align-items: center;
     color: white;
     background-size: cover;
+    box-shadow: 0 5px 5px #ada7a1;
 }
 
 .content {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    padding: 10vh 10vw;
+    padding: 10vh 10vw 5vh 10vw;
 }
 
 .content > div {
-    width: 35vw;
-    max-height: 50vh;
+    width: 45%;
+    height: auto;
     justify-content: center;
     align-items: center;
     margin-bottom: 10vh;
-    background-image: url(/images/textures/soft-wallpaper.png);
     box-shadow: 10px 10px 10px #777777 ;
 }
 
 .content > div[class*="text-container"] {
     padding: 2vw;
     background-color: #ffffff;
+    background-image: url(/images/textures/soft-wallpaper.png);
 }
 
 .content > div > img {
@@ -104,10 +114,11 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    background-color: #353535;
+    background-color: #5e5347;
     background-image: url(/images/textures/low-contrast-linen.png);
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+    box-shadow: 0 -10px 10px #35312c;
 }
 
 footer div {
@@ -151,7 +162,6 @@ footer a {
 }
 
 .more-button-image {
-    height: 60vh;
     width: 50vw;
     display: flex;
     justify-content: center;
@@ -169,9 +179,15 @@ footer a {
     p {
         font-size: 1rem;
     }
+    .content {
+        padding: 10vh 5vw 2.5vh 5vw;
+    }
 }
 
 @media only screen and (max-width: 1000px) {
+    h1 {
+        font-size: 3rem;
+    }
     h2 {
         font-size: 1.5rem; }
     p {
@@ -187,21 +203,17 @@ footer a {
         height: 50vh;
     }
     .content {
-        padding: 5vh 5vw;
-        justify-content: space-between;
+        padding: 5vh 5vw 1.5vh 5vw;
     }
     .content > div {
-        width: 42.5vw;
         margin-bottom: 5vh;
-    }
-    .content div img {
-        width: 42.5vw;
+        box-shadow: 5px 5px 5px #777777 ;
     }
 }
 
 @media only screen and (max-width: 780px) {
     h1 {
-        font-size: 4rem; 
+        font-size: 2.5rem; 
     }
     h2 {
         font-size: 2rem;
@@ -210,14 +222,24 @@ footer a {
         font-size: 1rem;
     }
     div[class*="hero"] {
-        height: 30vh;
+        height: 50vh;
+    }
+    .content {
+        padding: 7vh 10vw 0 10vw;
+        justify-content: space-between;
     }
     .content > div {
         width: 100%;
+        box-shadow: none;
     }
     .content > div > img {
-        height: 30vh;
         width: 100%;
+    }
+    .content > div[class*="text-container"] {
+        margin-bottom: 0;
+    }
+    .content > div[class*="image-container"] {
+        margin-bottom: 7vh;
     }
     .text-container-2,
     .image-container-2,
@@ -233,25 +255,25 @@ footer a {
 
 @media only screen and (max-width: 600px) {
     h1 {
-        font-size: 3rem;
+        font-size: 2rem;
     }
     h2 {
         font-size: 1.7rem;
         margin-bottom: 2vh;
     }
+    div[class*="hero"] {
+        height: 30vh;
+    }
 }
 
 @media only screen and (max-width: 420px) {
     h1 {
-        font-size: 2.2rem; 
+        font-size: 1.2rem; 
     }
     h2 {
         font-size: 1.3rem;
     }
     p {
         font-size: 0.8rem;
-    }
-    .content > div {
-        margin-bottom: 3vh;
     }
 }
