--- a/styles/style.css
+++ b/styles/style.css
@@ -118,7 +118,7 @@ footer {
     background-image: url(/images/textures/low-contrast-linen.png);
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    box-shadow: 0 -10px 10px #35312c;
+    box-shadow: 0 -10px 10px #bdb7b1;
 }
 
 footer div {
