--- a/styles/style.css
+++ b/styles/style.css
@@ -38,10 +38,10 @@ h2 {
     padding: 0 5vw;
     width: 100%;
     height: 12vh;
-    background-color: #5e5347;
+    background-color: #383634;
     background-image: url(/images/textures/low-contrast-linen.png);
     position: relative;
-    box-shadow: 0 20px 20px #35312c;
+    box-shadow: 0 20px 20px #292827;
 }
 
 .navbar a {
@@ -114,7 +114,7 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    background-color: #5e5347;
+    background-color: #383634;
     background-image: url(/images/textures/low-contrast-linen.png);
     color: white;
     font-family: Arial, Helvetica, sans-serif;
@@ -197,7 +197,7 @@ footer a {
         height: 7vh;
     }
     .navbar a {
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
     div[class*="hero"] {
         height: 50vh;
@@ -275,5 +275,11 @@ footer a {
     }
     p {
         font-size: 0.8rem;
+    }
+    .navbar {
+        padding: 0 10vw;
+    }
+    .navbar a {
+        font-size: 1.2rem;
     }
 }
